# password-manager

./: .gitignore  CMakeLists.txt  base.txt  dat.txt  data.txt  data1.txt  database1.txt  encryption.cpp  encryptor.cpp  main.cpp  passwords.txt
Console/: console.cpp  console.h
Encryptor/: encryptor.cpp  encryptor.h
Password/: password.cpp  password.h
data/: logs.txt
